--- a/src/nasdaq/NasdaqOptions.scss
+++ b/src/nasdaq/NasdaqOptions.scss
@@ -3,6 +3,7 @@
 }
 .vol-or-openinterets{
     display: inline-flex;
+    margin-top: 10px;
 
     .common-left-margin{
     margin-left: 10px;
@@ -14,5 +15,6 @@
 .market-data-checkbox{
     margin-top: 50px;
     margin-left: 20px;
+    margin-bottom: 20px;
 }
 
