--- a/src/components/PriceMarquee.scss
+++ b/src/components/PriceMarquee.scss
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 20px;
-    background-color: greenyellow;
+    background-color: skyblue;
     color: black;
     z-index: 9999;
     overflow: hidden;
