--- a/src/components/S3AlertTable.scss
+++ b/src/components/S3AlertTable.scss
@@ -31,11 +31,11 @@
 
         @keyframes blinkRow {
             0% {
-                background-color: #fff0f0;
+                background-color: green;
             }
 
             100% {
-                background-color: #ffeaea;
+                background-color: pink;
             }
         }
 
