table-scss-corrcetion

--- a/src/analytics/QuarterlyOpenInterest/DynamicTickerOptionTable.scss
+++ b/src/analytics/QuarterlyOpenInterest/DynamicTickerOptionTable.scss
@@ -57,7 +57,7 @@
 
   .option-table {
     width: 100%;
-    min-width: 800px;
+   //min-width: 800px;
     border-collapse: collapse;
     margin: auto;
     background: white;
